Infrastructure - Fix the nunit testcases in windows

--- a/src/Test/Test.csproj
+++ b/src/Test/Test.csproj
@@ -283,6 +283,7 @@
     <Compile Include="DictionaryForMIDsConvert\DictionaryForMIDsInputTests.cs" />
     <Compile Include="DictionaryForMIDsConvert\DictionaryForMIDsRecTest.cs" />
     <Compile Include="DictionaryForMIDsConvert\DictionaryForMIDsTests.cs" />
+    <Compile Include="epubConvert\EpubDictionaryExportTest.cs" />
     <Compile Include="epubConvert\EpubXsltTransformationTest.cs" />
     <Compile Include="GoBibleConvert\ExportGoBibleTest.cs">
       <SubType>Form</SubType>
