Update generation definitions and remove Mono.Sqlite dependency

--- a/src/CssDialog/CssDialog.csproj
+++ b/src/CssDialog/CssDialog.csproj
@@ -407,7 +407,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources2.Designer.cs</LastGenOutput>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="PublicationTask.resx">
       <DependentUpon>PublicationTask.cs</DependentUpon>
@@ -425,7 +425,7 @@
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <None Include="Resources\LayoutTableTwoColumn.png" />
   </ItemGroup>
